--- a/.github/workflows/cleavr_nmjrgbc0pz.yml
+++ b/.github/workflows/cleavr_nmjrgbc0pz.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Build app
         id: build-app
-        run: npm run build --production
+        run: npm run build
 
 ### ---  PLEASE DO NOT MODIFY ANYTHING BELOW THIS LINE --- ###
 
