--- a/.github/workflows/cleavr_ifby4lf9gw.yml
+++ b/.github/workflows/cleavr_ifby4lf9gw.yml
@@ -47,6 +47,10 @@ jobs:
         id: build-app
         run: npm run build
 
+      - name: Test node version
+        id: test-node
+        run: node --version
+
 ### ---  PLEASE DO NOT MODIFY ANYTHING BELOW THIS LINE --- ###
 
       - name: Generate artifact name
