--- a/.github/workflows/cleavr_ifby4lf9gw.yml
+++ b/.github/workflows/cleavr_ifby4lf9gw.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Test node version
         id: test-node
-        run: node --version
+        run: npm ci --omit="dev"
 
 ### ---  PLEASE DO NOT MODIFY ANYTHING BELOW THIS LINE --- ###
 
