--- a/.github/workflows/cleavr_nnh07nh59b.yml
+++ b/.github/workflows/cleavr_nnh07nh59b.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Build app
         id: build-app
-        run: npm run build --production
+        run: npm run mandal --production
 
 ### ---  PLEASE DO NOT MODIFY ANYTHING BELOW THIS LINE --- ###
 
